--- a/data/python/conda/Dockerfile
+++ b/data/python/conda/Dockerfile
@@ -1,5 +1,4 @@
 FROM continuumio/anaconda3
 
 RUN apt-get update -yqq && \
-    apt-get dist-upgrade -yqq && \
-    pip3 install git+https://github.com/PHT-Medic/train-container-library.git
+    apt-get dist-upgrade -yqq
