--- a/data/r/ml/Dockerfile
+++ b/data/r/ml/Dockerfile
@@ -19,8 +19,7 @@ RUN DEBIAN_FRONTEND=noninteractive apt-get update -y --no-install-recommends && 
     apt-get clean -y && \
     rm -rf /var/lib/apt/lists/* /tmp/* /var/tmp/*
 # tuck the python client here just in case
-RUN pip3 install git+https://github.com/PHT-Medic/train-container-library.git && \
-    rm -rf ~/.cache/pip
+RUN rm -rf ~/.cache/pip
 
 COPY requirements.txt /tmp/requirements.txt
 RUN Rscript -e 'install.packages(readLines("/tmp/requirements.txt"))'
