--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
         "url": "https://github.com/tada5hi"
     },
     "scripts": {
-        "build": "rm -rf ./dist && tsc",
-        "cli": "node dist/index.js",
-        "cli-dev": "ts-node src/index.ts",
+        "build:types": "tsc --emitDeclarationOnly -p tsconfig.json",
+        "build:js": "rollup -c",
+        "build": "rimraf dist && rimraf bin && npm run build:types && npm run build:js",
+        "cli": "node dist/cli.js",
+        "cli-dev": "ts-node src/cli.ts",
         "lint": "eslint --ext .ts,.vue,.js ./src/",
         "lint:fix": "npm run lint -- --fix"
     },
@@ -24,7 +26,19 @@
         "docker",
         "image-scan"
     ],
-    "bin": "dist/index.js",
+    "main": "dist/index.cjs",
+    "module": "dist/index.mjs",
+    "types": "dist/index.d.ts",
+    "exports": {
+        "./package.json": "./package.json",
+        ".": {
+            "types": "./dist/index.d.ts",
+            "import": "./dist/index.mjs",
+            "require": "./dist/index.cjs"
+        },
+        "./bin/*": "./bin/*"
+    },
+    "bin": "dist/cli.js",
     "license": "MIT",
     "dependencies": {
         "@routup/body": "^2.4.0",
@@ -48,6 +62,8 @@
         "zod": "^3.23.8"
     },
     "devDependencies": {
+        "@rollup/plugin-node-resolve": "^15.2.3",
+        "@rollup/plugin-swc": "^0.3.1",
         "@tada5hi/eslint-config-typescript": "^1.2.11",
         "@types/cross-spawn": "^6.0.2",
         "@types/dockerode": "^3.3.30",
@@ -55,6 +71,7 @@
         "@types/semver": "^7.5.8",
         "@types/tar-fs": "^2.0.4",
         "eslint": "^8.48.0",
+        "rollup": "^4.18.1",
         "typescript": "^5.5.2"
     }
 }
