--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,7 +6,7 @@
         ],
         "module": "commonjs",
         "outDir": "dist",
-        "target": "ES2020",
+        "target": "ESNext",
         "experimentalDecorators": true,
         "emitDecoratorMetadata": true,
         "strictPropertyInitialization": false
