--- a/data/python/sdk-test/Dockerfile
+++ b/data/python/sdk-test/Dockerfile
@@ -1,11 +1,13 @@
-FROM ubuntu
+FROM python:3.10
 ARG DEBIAN_FRONTEND=noninteractive
 
-RUN apt -y update && apt-get -y install software-properties-common && \
-    add-apt-repository ppa:deadsnakes/ppa && apt -y update && \
-    apt-get install -y python3.10 git && apt install -y python-is-python3 && apt install -y python3-pip \
+RUN apt-get update -yqq && \
+    apt-get dist-upgrade -yqq && \
+    apt-get install -yqq git
 
 COPY requirements.txt /tmp/requirements.txt
+
+RUN python3 -m pip install --upgrade pip
 
 RUN pip3 install -r /tmp/requirements.txt
 
