feat: add pandas for uc1 master image

--- a/data/python/use-case-1/requirements.yml
+++ b/data/python/use-case-1/requirements.yml
@@ -245,6 +245,7 @@ dependencies:
       - matplotlib==3.9.1
       - natsort==8.4.0
       - packaging==24.1
+      - pandas==2.2.2
       - pillow==10.4.0
       - pydeseq2==0.4.10
       - pyparsing==3.1.2
