fix: dockerfile changes - same error

--- a/data/python/use-case-1/Dockerfile
+++ b/data/python/use-case-1/Dockerfile
@@ -1,14 +1,14 @@
-FROM continuumio/anaconda3
-MAINTAINER "marius.de-arruda-botelho-herr@uni-tuebingen.de"
+FROM continuumio/miniconda3
 
 RUN apt-get update -yqq && \
     apt-get dist-upgrade -yqq && \
     apt-get install -yqq git
 
-COPY requirements.yml /tmp/requirements.yml
+COPY conda.yml /tmp/conda.yml
 
-RUN conda env create -f /tmp/requirements.yml && \
-    conda activate use-case-1
+RUN conda create -n use-case-1 && \
+    conda activate use-case-1 && \
+    conda env update -f conda.yml
 
 RUN python3 -m pip install --upgrade pip && \
     pip3 install git+https://github.com/PrivateAIM/python-sdk.git@822aa858946f40172594c7fa6d399080fa23dcfd
