feat: refactor take torch out of sdk-test and replace pytorch

--- a/data/python/pytorch/Dockerfile
+++ b/data/python/pytorch/Dockerfile
@@ -1,4 +1,14 @@
-FROM nvcr.io/nvidia/pytorch:21.09-py3
+FROM python:3.10
+ARG DEBIAN_FRONTEND=noninteractive
 
 RUN apt-get update -yqq && \
-    apt-get dist-upgrade -yqq
+    apt-get dist-upgrade -yqq && \
+    apt-get install -yqq git
+
+COPY requirements.txt /tmp/requirements.txt
+
+RUN python3 -m pip install --upgrade pip
+
+RUN pip3 install -r /tmp/requirements.txt
+
+RUN pip3 install git+https://github.com/PrivateAIM/python-sdk.git@7ad5437024d675fc1ff8680492b32c8d62213258
