--- a/package.json
+++ b/package.json
@@ -43,12 +43,11 @@
     "dependencies": {
         "@routup/body": "^2.4.0",
         "@tada5hi/semantic-release": "^0.3.1",
-        "@tada5hi/tsconfig": "^0.5.1",
         "cac": "^6.7.14",
         "consola": "^3.2.3",
         "continu": "^1.3.2",
         "cross-spawn": "^7.0.3",
-        "docker-scan": "^1.1.0",
+        "docken": "^1.0.0",
         "dockerode": "^4.0.2",
         "dotenv": "^16.4.5",
         "get-port-please": "^3.1.2",
@@ -65,6 +64,7 @@
         "@rollup/plugin-node-resolve": "^15.2.3",
         "@rollup/plugin-swc": "^0.3.1",
         "@tada5hi/eslint-config-typescript": "^1.2.11",
+        "@tada5hi/tsconfig": "^0.5.1",
         "@types/cross-spawn": "^6.0.2",
         "@types/dockerode": "^3.3.30",
         "@types/node": "^20.4.4",
