chore: group dependabot updates

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -9,9 +9,32 @@ updates:
 
     # Maintain dependencies for npm
     - package-ecosystem: "npm"
-      directory: "/"
       target-branch: "develop"
-      open-pull-requests-limit: 20
+      directory: "/"
       schedule:
           interval: "daily"
       versioning-strategy: "increase"
+      open-pull-requests-limit: 20
+      commit-message:
+          prefix: "fix"
+          prefix-development: "build"
+          include: "scope"
+      groups:
+          majorProd:
+              applies-to: version-updates
+              dependency-type: production
+              update-types:
+                  - "major"
+          majorDev:
+              applies-to: version-updates
+              dependency-type: development
+              exclude-patterns:
+                  - "eslint"
+                  - "semantic-release"
+              update-types:
+                  - "major"
+          minorAndPatch:
+              applies-to: version-updates
+              update-types:
+                  - "patch"
+                  - "minor"
