fix: fix nltk method download
Co-authored-by: antidodo <albin2993@gmail.com>

--- a/data/python/gemtex/Dockerfile
+++ b/data/python/gemtex/Dockerfile
@@ -11,9 +11,10 @@ RUN python3 -m pip install --upgrade pip
 
 RUN pip3 install -r /tmp/requirements.txt
 
-RUN python3 -c """
-import nltk
-nltk.download('punkt_tab')
-"""
+RUN touch nltk_downloads.py
+
+RUN echo 'import nltk\nnltk.download("punkt_tab")' >> nltk_downloads.py
+
+RUN python3 nltk_downloads.py
 
 RUN pip3 install git+https://github.com/PrivateAIM/flame-patterns.git@817e342aacf2cc1b3ba8e4d420d444271e25e0cf
