--- a/data/python/pytorch/Dockerfile
+++ b/data/python/pytorch/Dockerfile
@@ -1,4 +1,4 @@
-FROM python:3.11
+FROM nvidia/cuda:12.3.2-cudnn8-runtime-ubuntu22.04
 ARG DEBIAN_FRONTEND=noninteractive
 
 RUN apt-get update -yqq && \
