--- a/data/python/pytorch/Dockerfile
+++ b/data/python/pytorch/Dockerfile
@@ -9,7 +9,7 @@ RUN apt-get update -yqq && \
       python3 \
       python3-pip \
       python-is-python3 && \
-    && rm -rf /var/lib/apt/lists/*
+     rm -rf /var/lib/apt/lists/*
 
 COPY requirements.txt /tmp/requirements.txt
 
