--- a/data/python/gemtex/Dockerfile
+++ b/data/python/gemtex/Dockerfile
@@ -17,4 +17,4 @@ RUN echo 'import nltk\nnltk.download("punkt_tab")' >> nltk_downloads.py
 
 RUN python3 nltk_downloads.py
 
-RUN pip3 install git+https://github.com/PrivateAIM/flame-patterns.git
+RUN pip3 install git+https://github.com/PrivateAIM/flame-patterns.git@3eb7493cd9ae7d906b396a1ca0524ecb09dc465f
