feat: bump flame-pattern version to v0.2.4
Co-authored-by: antidodo <albin2993@gmail.com>

--- a/data/python/ml/Dockerfile
+++ b/data/python/ml/Dockerfile
@@ -7,3 +7,5 @@ RUN apt-get update -yqq && \
 COPY requirements.txt /tmp/requirements.txt
 
 RUN pip3 install -r /tmp/requirements.txt
+
+RUN pip3 install git+https://github.com/PrivateAIM/flame-patterns.git@v0.2.4
