--- a/data/python/conda/use-case-1/conda.yml
+++ b/data/python/conda/use-case-1/conda.yml
@@ -252,4 +252,4 @@ dependencies:
       - scikit-learn==1.5.1
       - scipy==1.13.1
       - threadpoolctl==3.5.0
-      - git+https://github.com/PrivateAIM/flame-patterns.git@3eb7493cd9ae7d906b396a1ca0524ecb09dc465f
+      - git+https://github.com/PrivateAIM/flame-patterns.git@v0.2.4
