--- a/data/python/use-cases/use-case-1/Dockerfile
+++ b/data/python/use-cases/use-case-1/Dockerfile
@@ -9,4 +9,4 @@ COPY requirements.txt /tmp/requirements.txt
 
 RUN python3 -m pip install --upgrade pip
 RUN pip3 install -r /tmp/requirements.txt
-RUN pip3 install git+https://github.com/PrivateAIM/flame-patterns.git@c855be81a30b5c25bae8f434c5f16b9378dc0db2
+RUN pip3 install git+https://github.com/PrivateAIM/flame-patterns.git@v0.2.4
