--- a/data/python/use-cases/fedstats/Dockerfile
+++ b/data/python/use-cases/fedstats/Dockerfile
@@ -11,4 +11,4 @@ RUN python3 -m pip install --upgrade pip
 
 RUN pip3 install -r /tmp/requirements.txt
 
-RUN pip3 install git+https://github.com/PrivateAIM/flame-patterns.git@v0.2.4
+RUN pip3 install git+https://github.com/PrivateAIM/flame-patterns.git@0.2.4
