--- a/data/python/use-cases/ood/requirements.txt
+++ b/data/python/use-cases/ood/requirements.txt
@@ -6,6 +6,7 @@ pandas==2.2.2
 pynrrd==1.0.0
 PyYAML==6.0.2
 scipy==1.14.0
+SimpleITK==2.3.0
 scikit-image==0.24.0
 scikit-learn==1.5.1
 torch==2.4.0
