--- a/data/python/test/canary/Dockerfile
+++ b/data/python/test/canary/Dockerfile
@@ -11,4 +11,4 @@ RUN python3 -m pip install --upgrade pip
 
 RUN pip3 install -r /tmp/requirements.txt
 
-RUN pip3 install git+https://github.com/PrivateAIM/flame-patterns.git@9e7905e8cf72d9b03446149b407b92bd256ccd3a
+RUN pip3 install git+https://github.com/PrivateAIM/flame-patterns.git@canary
