--- a/data/python/test/canary/Dockerfile
+++ b/data/python/test/canary/Dockerfile
@@ -12,3 +12,5 @@ RUN python3 -m pip install --upgrade pip
 RUN pip3 install -r /tmp/requirements.txt
 
 RUN pip3 install git+https://github.com/PrivateAIM/flame-patterns.git@canary
+
+RUN echo "Flame Patterns canary image built successfully."
