feat: update canary image
Co-authored-by: antidodo <albin2993@gmail.com>

--- a/data/python/test/canary/Dockerfile
+++ b/data/python/test/canary/Dockerfile
@@ -13,3 +13,5 @@ RUN pip3 install -r /tmp/requirements.txt
 
 RUN pip3 install git+https://github.com/PrivateAIM/flame-patterns.git@canary
 
+RUN echo
+
