feat: manually update test/canary with sha
Co-authored-by: antidodo <albin2993@gmail.com>

--- a/data/python/test/canary/Dockerfile
+++ b/data/python/test/canary/Dockerfile
@@ -11,5 +11,5 @@ RUN python3 -m pip install --upgrade pip
 
 RUN pip3 install -r /tmp/requirements.txt
 
-RUN pip3 install git+https://github.com/PrivateAIM/flame-patterns.git@canary
+RUN pip3 install git+https://github.com/PrivateAIM/flame-patterns.git@95e78e5bc53f184af2cd42d4b44b8c83d805c068
 
