feat: update flame-patterns to python-sdk-patterns repo
Co-authored-by: antidodo <albin2993@gmail.com>

--- a/data/python/conda/base/Dockerfile
+++ b/data/python/conda/base/Dockerfile
@@ -2,3 +2,7 @@ FROM continuumio/anaconda3
 
 RUN apt-get update -yqq && \
     apt-get dist-upgrade -yqq
+
+RUN python3 -m pip install --upgrade pip
+
+RUN pip3 install git+https://github.com/PrivateAIM/python-sdk-patterns.git@0.3.1
