--- a/data/python/conda/use-case-1/Dockerfile
+++ b/data/python/conda/use-case-1/Dockerfile
@@ -6,7 +6,10 @@ RUN apt-get update -yqq && \
 
 COPY conda.yml /tmp/conda.yml
 
+# Create and execute conda envs via .yaml and add env name to image.json execution command as arg
 RUN conda env create -f /tmp/conda.yml
 
-#RUN echo "conda activate use-case-1" >> ~/.bashrc
-#SHELL ["/bin/bash", "--login", "-c"]
+
+# Not working example:
+## RUN echo "conda activate use-case-1" >> ~/.bashrc
+## SHELL ["/bin/bash", "--login", "-c"]
