--- a/data/python/ml/Dockerfile
+++ b/data/python/ml/Dockerfile
@@ -6,6 +6,7 @@ RUN apt-get update -yqq && \
 
 COPY requirements.txt /tmp/requirements.txt
 
+RUN python3 -m pip install --upgrade pip
 RUN pip3 install -r /tmp/requirements.txt
 
-RUN pip3 install git+https://github.com/PrivateAIM/flame-patterns.git@0.3.1
+RUN pip3 install git+https://github.com/PrivateAIM/python-sdk-patterns.git@0.3.1
