--- a/data/python/tensorflow/Dockerfile
+++ b/data/python/tensorflow/Dockerfile
@@ -3,4 +3,5 @@ FROM nvcr.io/nvidia/tensorflow:23.06-tf2-py3
 RUN apt-get update -yqq && \
     apt-get dist-upgrade -yqq
 
-RUN pip3 install git+https://github.com/PrivateAIM/flame-patterns.git@0.3.1
+RUN python3 -m pip install --upgrade pip
+RUN pip3 install git+https://github.com/PrivateAIM/python-sdk-patterns.git@0.3.1
