--- a/data/python/use-cases/record-linkage/Dockerfile
+++ b/data/python/use-cases/record-linkage/Dockerfile
@@ -23,13 +23,13 @@ RUN apt-get update && apt-get install -y wget gnupg lsb-release \
     && apt-get clean \
     && rm -rf /var/lib/apt/lists/*
 
-	
+
 COPY requirements.txt /tmp/requirements.txt
 
 RUN python3 -m pip install --upgrade pip
 RUN pip3 install -r /tmp/requirements.txt
 
-COPY --from=samply/mainzelliste-rs:main /usr/local/bin/mainzelliste /usr/local/bin/mainzelliste
+COPY --from=samply/mainzelliste-rs:0.1.0 /usr/local/bin/mainzelliste /usr/local/bin/mainzelliste
 RUN chmod +x /usr/local/bin/mainzelliste
-	
+
 RUN pip3 install git+https://github.com/PrivateAIM/flame-patterns.git@0.2.4
